--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -6,19 +6,20 @@
 {% endcomment %}
 
 <div class="homepage">
-  {% section 'hero-banner' %}
+  {% include 'hero-banner' %}
   
-  {% section 'featured-categories' %}
+  {% include 'featured-categories' %}
   
-  {% section 'products-grid' %}
+  {% include 'products-grid' %}
   
-  {% section 'promo-banner' %}
+  {% include 'promo-banner' %}
   
-  {% section 'trust-section' %}
+  {% include 'trust-section' %}
   
-  {% section 'social-gallery' %}
+  {% include 'social-gallery' %}
   
-  {% section 'newsletter' %}
+  {% include 'newsletter' %}
+</div>
 </div>
 
 <style>
