--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -187,8 +187,8 @@
   <!-- Skip to Content Link -->
   <a href="#main-content" class="skip-to-content">Skip to content</a>
 
-  <!-- Header Section -->
-  {% section 'header' %}
+  <!-- Header -->
+  {% include 'header' %}
 
   <!-- Cart Drawer (Global) -->
   {% include 'cart-drawer' %}
@@ -198,8 +198,8 @@
     {{ content_for_layout }}
   </main>
 
-  <!-- Footer Section -->
-  {% section 'footer' %}
+  <!-- Footer -->
+  {% include 'footer' %}
 
   <!-- Scripts -->
   
