--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -191,7 +191,7 @@
   {% include 'header' %}
 
   <!-- Cart Drawer (Global) -->
-  {% include 'cart-drawer' %}
+  {% render 'cart-drawer' %}
 
   <!-- Main Content Area -->
   <main id="main-content" role="main">
