again trying to solve error

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -188,10 +188,10 @@
   <a href="#main-content" class="skip-to-content">Skip to content</a>
 
   <!-- Header -->
-  {% include 'header' %}
+  {%- render 'header' -%}
 
   <!-- Cart Drawer (Global) -->
-  {% render 'cart-drawer' %}
+  {%- render 'cart-drawer' -%}
 
   <!-- Main Content Area -->
   <main id="main-content" role="main">
@@ -199,7 +199,7 @@
   </main>
 
   <!-- Footer -->
-  {% include 'footer' %}
+  {%- render 'footer' -%}
 
   <!-- Scripts -->
   
