--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -6,17 +6,17 @@
 {% endcomment %}
 
 <div class="homepage">
-  {% include 'hero-banner' %}
+  {%- render 'hero-banner' -%}
   
-  {% include 'featured-categories' %}
+  {%- render 'featured-categories' -%}
   
-  {% include 'products-grid' %}
+  {%- render 'products-grid' %}
   
-  {% include 'promo-banner' %}
+  {%- render 'promo-banner' %}
   
-  {% include 'trust-section' %}
+  {%- render 'trust-section' %}
   
-  {% include 'social-gallery' %}
+  {%- include 'social-gallery' %}
   
   {% include 'newsletter' %}
 </div>
