--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -45,6 +45,16 @@
   <!-- Design Token System (Global Styles) -->
   {{ 'design-tokens.css' | asset_url | stylesheet_tag }}
 
+  <!-- Main Stylesheet (Base Styles & Utilities) -->
+  {{ 'main.css' | asset_url | stylesheet_tag }}
+
+  <!-- Component-Specific Stylesheets -->
+  {{ 'header.css' | asset_url | stylesheet_tag }}
+  {{ 'footer.css' | asset_url | stylesheet_tag }}
+  {{ 'product.css' | asset_url | stylesheet_tag }}
+  {{ 'collection.css' | asset_url | stylesheet_tag }}
+  {{ 'buttons.css' | asset_url | stylesheet_tag }}
+
   <!-- Mobile Responsive Enhancements -->
   {% include 'mobile-responsive' %}
 
